You can now visualize what PR2 is doing by launching {{{  $ ./build/playtao -p -R ros }}} ...but for the moment it mirrors the right arm for the left, dunno where that bug is hiding...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,21 +117,21 @@ if (TRY_ROS)
       add_definitions (-DHAVE_URDF)
     endif (${urdf_PACKAGE_PATH} STREQUAL "")
     
-    rosbuild_find_ros_package (pr2_stanford_wbc)
-    if (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
-      message ("WARNING pr2_stanford_wbc ROS package not found")
-    else (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
-      message ("Found pr2_stanford_wbc ROS package")
-      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp cflags-only-I)
-      include_directories (${playtao_temp})
-      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp cflags-only-other)
-      add_definitions (${playtao_temp})
-      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp libs-only-L)
-      link_directories (${playtao_temp})
-      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp libs-only-l)
-      list (APPEND LIBS ${playtao_temp})
-      add_definitions (-DHAVE_PR2_STANFORD_WBC)
-    endif (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
+###    rosbuild_find_ros_package (pr2_stanford_wbc)
+###    if (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
+###      message ("WARNING pr2_stanford_wbc ROS package not found")
+###    else (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
+###      message ("Found pr2_stanford_wbc ROS package")
+###      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp cflags-only-I)
+###      include_directories (${playtao_temp})
+###      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp cflags-only-other)
+###      add_definitions (${playtao_temp})
+###      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp libs-only-L)
+###      link_directories (${playtao_temp})
+###      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp libs-only-l)
+###      list (APPEND LIBS ${playtao_temp})
+###      add_definitions (-DHAVE_PR2_STANFORD_WBC)
+###    endif (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
     
   endif (NOT $ENV{ROS_ROOT} STREQUAL "")
 endif (TRY_ROS)
