Depend "just" on TAO and jspace... kicking out a lot of cruft from playtao.cpp (but not nearly finished yet). Still have to convert things from SAIMatrix to Eigen2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,66 +11,28 @@
 
 cmake_minimum_required (VERSION 2.6)
 
-if (NOT WBC_ROOT)
-  set (WBC_ROOT $ENV{WBC_ROOT})
-endif (NOT WBC_ROOT)
-if (NOT WBC_ROOT)
-  message (FATAL_ERROR "WBC_ROOT not set. For ROS setups, try adding -DWBC_ROOT=`rospack find stanford_wbc`/local to the CMake command line.")
-endif (NOT WBC_ROOT)
-if (EXISTS ${WBC_ROOT}/share/wbc.cmake)
-  include (${WBC_ROOT}/share/wbc.cmake)
-else (EXISTS ${WBC_ROOT}/share/wbc.cmake)
-  message ("WARNING ${WBC_ROOT}/share/wbc.cmake does not exist, trying ${WBC_ROOT}/wbc.cmake instead...")
-  include (${WBC_ROOT}/wbc.cmake)
-endif (EXISTS ${WBC_ROOT}/share/wbc.cmake)
-wbc_getvars()
-
 project (playtao)
 set (CMAKE_VERBOSE_MAKEFILE ON)
-add_definitions (-DHAVE_LOG4CXX)
 
 if (WIN32)
-  message ("Detected Microsoft Windows")
   add_definitions (-DWIN32)
 else (WIN32)
   if (APPLE)
-    message ("Detected Mac OS X")
     add_definitions (-DOSX)
-    # add the default macports location to include and link path
+    list (APPEND CMAKE_REQUIRED_INCLUDES /opt/local/include)
     include_directories (/opt/local/include)
     link_directories (/opt/local/lib)
   endif (APPLE)
   if (CMAKE_SYSTEM_NAME MATCHES Linux)
-    message ("Detected Linux")
     add_definitions (-DLINUX)
   endif (CMAKE_SYSTEM_NAME MATCHES Linux)
   if (CMAKE_SYSTEM_NAME MATCHES OpenBSD)
-    message ("Detected OpenBSD")
     add_definitions (-DOPENBSD)
+    list (APPEND CMAKE_REQUIRED_INCLUDES /usr/local/include)
     include_directories (/usr/local/include)
     link_directories (/usr/local/lib)
   endif (CMAKE_SYSTEM_NAME MATCHES OpenBSD)
 endif(WIN32)
-
-include (CheckCXXCompilerFlag)
-check_cxx_compiler_flag (-pipe CXX_FLAG_pipe)
-if (CXX_FLAG_pipe)
-  add_definitions (-pipe)
-endif (CXX_FLAG_pipe)
-check_cxx_compiler_flag (-Wall CXX_FLAG_Wall)
-if (CXX_FLAG_Wall)
-  add_definitions (-Wall)
-endif (CXX_FLAG_Wall)
-
-if (NOT CMAKE_BUILD_TYPE)
-  SET (CMAKE_BUILD_TYPE Debug)
-endif (NOT CMAKE_BUILD_TYPE)
-if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-  check_cxx_compiler_flag (-O0 CXX_FLAG_O0)
-  if (CXX_FLAG_O0)
-    add_definitions (-O0)
-  endif (CXX_FLAG_O0)
-endif (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
 
 include (FindOpenGL)
 if (NOT OPENGL_FOUND)
@@ -82,59 +44,70 @@ if (NOT GLUT_FOUND)
   message (FATAL_ERROR "GLUT not found")
 endif (NOT GLUT_FOUND)
 
-include_directories (${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR} ${WBC_ROOT}/include ${PROJECT_SOURCE_DIR})
-link_directories (${WBC_ROOT}/lib)
+include (CheckIncludeFileCXX)
+
+if (NOT JSPACE_DIR)
+  set (JSPACE_DIR $ENV{JSPACE_DIR})
+endif (NOT JSPACE_DIR)
+if (JSPACE_DIR)
+  message ("using JSPACE_DIR ${JSPACE_DIR}")
+  list (APPEND CMAKE_REQUIRED_INCLUDES ${JSPACE_DIR}/include ${JSPACE_DIR} ${JSPACE_DIR}/jspace)
+  include_directories (${JSPACE_DIR}/include ${JSPACE_DIR} ${JSPACE_DIR}/jspace)
+  link_directories (${JSPACE_DIR}/lib ${JSPACE_DIR} ${JSPACE_DIR}/jspace)
+endif (JSPACE_DIR)
+#check_include_file_cxx (jspace/Model.hpp HAVE_JSPACE)
+#if (${HAVE_JSPACE})
+#  message ("found jspace")
+#else (${HAVE_JSPACE})
+#  message (FATAL_ERROR "jspace not found, try passing -DJSPACE_DIR:path=/path/to/jspace")
+#endif (${HAVE_JSPACE})
+
+if (NOT TAO_DIR)
+  set (TAO_DIR $ENV{TAO_DIR})
+endif (NOT TAO_DIR)
+if (TAO_DIR)
+  message ("using TAO_DIR ${TAO_DIR}")
+  list (APPEND CMAKE_REQUIRED_INCLUDES ${TAO_DIR}/include ${TAO_DIR} ${TAO_DIR}/tao)
+  include_directories (${TAO_DIR}/include ${TAO_DIR} ${TAO_DIR}/tao)
+  link_directories (${TAO_DIR}/lib ${TAO_DIR} ${TAO_DIR}/tao)
+endif (TAO_DIR)
+#check_include_file_cxx (tao/dynamics/taoNode.h HAVE_TAO)
+#if (${HAVE_TAO})
+#  message ("found tao")
+#else (${HAVE_TAO})
+#  message (FATAL_ERROR "tao not found, try passing -DTAO_DIR:path=/path/to/tao")
+#endif (${HAVE_TAO})
+
+if (NOT EIGEN2_DIR)
+  set (EIGEN2_DIR $ENV{EIGEN2_DIR})
+endif (NOT EIGEN2_DIR)
+if (EIGEN2_DIR)
+  message ("using EIGEN2_DIR ${EIGEN2_DIR}")
+  list (APPEND CMAKE_REQUIRED_INCLUDES
+    ${EIGEN2_DIR}/include ${EIGEN2_DIR}
+    ${EIGEN2_DIR}/include/eigen2 ${EIGEN2_DIR}/eigen2)
+  include_directories (
+    ${EIGEN2_DIR}/include ${EIGEN2_DIR}
+    ${EIGEN2_DIR}/include/eigen2 ${EIGEN2_DIR}/eigen2)
+else (EIGEN2_DIR)
+  list (APPEND CMAKE_REQUIRED_INCLUDES
+    /usr/include/eigen2 /opt/local/include/eigen2)
+  include_directories (/usr/include/eigen2 /opt/local/include/eigen2)
+endif (EIGEN2_DIR)
+check_include_file_cxx (Eigen/Core HAVE_EIGEN2)
+if (${HAVE_EIGEN2})
+  message ("found Eigen")
+else (${HAVE_EIGEN2})
+  message (FATAL_ERROR "Eigen not found. Install it in a system location (e.g. `sudo apt-get install libeigen2-dev') or pass -DEIGEN2_DIR:path=/path/to/eigen2 to cmake.")
+endif (${HAVE_EIGEN2})
+
+include_directories (
+  .
+  ${OPENGL_INCLUDE_DIR}
+  ${GLUT_INCLUDE_DIR})
 
 file (GLOB SOURCES gfx/*.cpp gfx/*.c *.cpp)
-list (APPEND LIBS ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} Stanford_WBC)
-
-if (NOT TRY_ROS)
-  set (TRY_ROS true)
-endif (NOT TRY_ROS)
-
-if (TRY_ROS)
-  if (NOT $ENV{ROS_ROOT} STREQUAL "")
-    if (NOT EXISTS $ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-      message (FATAL_ERROR "ROS_ROOT is set but rosbuild.cmake not found")
-    endif (NOT EXISTS $ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-    
-    include ($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-    add_definitions (-DHAVE_ROS)
-    
-    rosbuild_find_ros_package (urdf)
-    if (${urdf_PACKAGE_PATH} STREQUAL "")
-      message ("WARNING urdf ROS package not found")
-    else (${urdf_PACKAGE_PATH} STREQUAL "")
-      message ("Found urdf ROS package")
-      rosbuild_invoke_rospack (urdf playtao temp cflags-only-I)
-      include_directories (${playtao_temp})
-      rosbuild_invoke_rospack (urdf playtao temp cflags-only-other)
-      add_definitions (${playtao_temp})
-      rosbuild_invoke_rospack (urdf playtao temp libs-only-L)
-      link_directories (${playtao_temp})
-      rosbuild_invoke_rospack (urdf playtao temp libs-only-l)
-      list (APPEND LIBS ${playtao_temp})
-      add_definitions (-DHAVE_URDF)
-    endif (${urdf_PACKAGE_PATH} STREQUAL "")
-    
-###    rosbuild_find_ros_package (pr2_stanford_wbc)
-###    if (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
-###      message ("WARNING pr2_stanford_wbc ROS package not found")
-###    else (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
-###      message ("Found pr2_stanford_wbc ROS package")
-###      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp cflags-only-I)
-###      include_directories (${playtao_temp})
-###      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp cflags-only-other)
-###      add_definitions (${playtao_temp})
-###      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp libs-only-L)
-###      link_directories (${playtao_temp})
-###      rosbuild_invoke_rospack (pr2_stanford_wbc playtao temp libs-only-l)
-###      list (APPEND LIBS ${playtao_temp})
-###      add_definitions (-DHAVE_PR2_STANFORD_WBC)
-###    endif (${pr2_stanford_wbc_PACKAGE_PATH} STREQUAL "")
-    
-  endif (NOT $ENV{ROS_ROOT} STREQUAL "")
-endif (TRY_ROS)
+list (APPEND LIBS ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} jspace )
 
 add_executable (playtao ${SOURCES})
 target_link_libraries (playtao ${LIBS})
