Decruft some leftover tentative code for simulating dynamics based on TAO.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,16 @@ project (playtao)
 #set (CMAKE_VERBOSE_MAKEFILE ON)
 #set (CMAKE_BUILD_TYPE Debug)
 
+include (CheckCXXCompilerFlag)
+check_cxx_compiler_flag (-pipe CXX_FLAG_pipe)
+if (CXX_FLAG_pipe)
+  add_definitions (-pipe)
+endif (CXX_FLAG_pipe)
+check_cxx_compiler_flag (-Wall CXX_FLAG_Wall)
+if (CXX_FLAG_Wall)
+  add_definitions (-Wall)
+endif (CXX_FLAG_Wall)
+
 if (WIN32)
   add_definitions (-DWIN32)
 else (WIN32)
